fix text-align on wrong media query

--- a/src/sass/blocks/_article.sass
+++ b/src/sass/blocks/_article.sass
@@ -15,10 +15,8 @@
   +element(content)
     padding: 1.5em
     
-    +min-breakpoint($small-breakpoint)
-      text-align: right
-    
     +min-breakpoint($medium-breakpoint)
+      text-align: right
       flex: 3
 
   +element(title)
